--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,10 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #363b46;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +13,73 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  height: 300px;
 }
+
+.form-input {
+  border: none;
+  padding: 10px 20px;
+  color: rgb(190, 183, 183);
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+  font-size: 18px;
+  margin-top: 40px;
+  font-weight: 600;
+  border-radius: 8px;
+}
+
+.submit-button {
+  border: none;
+  padding: 10px 50px;
+  background-color: rgb(124, 38, 117);
+  color: rgb(190, 183, 183);
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+  font-size: 18px;
+  margin-top: 40px;
+  font-weight: 600;
+  border-radius: 8px;
+}
+
+.search-result {
+  border: none;
+  padding: 20px;
+  width: 400px;
+  background-color: rgb(255, 255, 255);
+  color: rgb(44, 44, 44);
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace;
+  font-size: 18px;
+  margin-top: 40px;
+  font-weight: 600;
+  border-radius: 8px;
+}
+
+.app-title {
+  margin: 16px;
+}
+
+.result-label{
+  margin-top: 10px;
+  font-weight: 100;
+}
+
+p {
+  margin: 0px;
+}
+
